Feature/update dependencies (#5)
* Gradle version 8.4 -> 8.10.2, also include documentation

* Remove obsolete dependencies and simplify them

* Fix VAs + small refactor

---------

Co-authored-by: nyanyan <zentox@users.noreply.github.com>
Co-authored-by: Daniel Mangold <mangold.daniel@protonmail.com>